parslers-benchmark/src/tests/invalid/semanticErr/function/funcVarAccess.wacc
# functions cannot access global variables

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f() is
    x = -1 ;
		return 0
	end
  int x = 5 ;
  int y = call f() ;
  println x
end
	
